# 3D-Lidar-Odometry-and-Tracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  issues  package.xml
deprecated_code/: FeatureExtractor.cpp  FeatureExtractor.hpp  FeatureExtractorInterface.hpp  GraphInterface.hpp  MyMeasurementAdaptor.hpp  TestCloudVisualization.cpp  TestClusterizeFeatures.cpp  TestDatasetManager.cpp  TestDrawBoundariesCluster.cpp  TestDrawCloud.cpp  TestDrawClustersSimple.cpp  TestDrawSampledSmoothness.cpp  TestDrawSmoothness.cpp  TestDummy.cpp  Visualizer.cpp  Visualizer.hpp
deprecated_code/aligner/: CustomAlignerSlice3d.hpp  instances.cpp
include/loam/: structs.hpp
src/: CMakeLists.txt  DatasetManager.cpp  DatasetManager.hpp
src/loam/: CMakeLists.txt  CustomMeasurementAdaptor.cpp  CustomMeasurementAdaptor.hpp  DatasetManager.cpp  DatasetManager.hpp  Drawer.cpp  Drawer.hpp  Dummy.cpp  Dummy.hpp  MyMath.cpp  MyMath.hpp  MyMeasurementAdaptor.cpp  MyMeasurementAdaptor.hpp  MyToyConfigurable.cpp  MyToyConfigurable.hpp  ScanPoint.cpp  ScanPoint.hpp  Visualizer.cpp  Visualizer.hpp  instances.cpp  instances.h
src/loam/aligner/: Aligner.cpp  Aligner.hpp  CustomAlignerSlice3d.cpp  CustomAlignerSlice3d.hpp  instances.cpp  instances.h
src/loam/features/: Clusterer.cpp  Clusterer.hpp  CustomMatchable.cpp  CustomMatchable.hpp  DataPoint.cpp  DataPoint.hpp  DataPointInterface.hpp  Edge.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  IntegralCell.cpp  IntegralCell.hpp  IntegralImage.cpp  IntegralImage.hpp  IntegralImageInterface.hpp  Line.cpp  Line.hpp  Matchable.cpp  Matchable.hpp  MatchableInterface.hpp  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  SphericalDepthImage.cpp  SphericalDepthImage.hpp  Surface.hpp
src/loam/include/: structs.hpp  turboColors.cpp  turboColors.hpp
src/loam/interfaces/: DataPointInterface.hpp  FeatureExtractorInterface.hpp  FeatureInterface.hpp  IntegralImageInterface.hpp  MatchableInterface.hpp
src/loam/matcher/: CorrespondenceFinderMatchables.cpp  CorrespondenceFinderMatchables.hpp  CorrespondenceFinderMatchablesBruteForce.cpp  CorrespondenceFinderMatchablesBruteForce.hpp  CorrespondenceFinderMatchablesKDtree.cpp  CorrespondenceFinderMatchablesKDtree.hpp
src/loam/tracker/: Map.cpp  Map.hpp  MotionModel.cpp  MotionModel.hpp  Tracker.cpp  Tracker.hpp
src/tests/: CMakeLists.txt  TestAligner.cpp  TestBooleanCondition.cpp  TestCloudVisualization.cpp  TestClusterizeFeatures.cpp  TestCorrespondanceFinder.cpp  TestCustomAligner.cpp  TestCustomConfigurableExec.cpp  TestDEPRECATED.cpp  TestDataPoint.cpp  TestDatasetManager.cpp  TestDraw2DclustererImgs.cpp  TestDraw2DindexImg.cpp  TestDraw2Dnormals.cpp  TestDraw2DrealData.cpp  TestDrawAxes.cpp  TestDrawClusters.cpp  TestDrawClustersSimple.cpp  TestDrawFullClouds.cpp  TestDrawLinesPlanes.cpp  TestDrawMatchablesDummyData.cpp  TestDrawMatchablesRealData.cpp  TestDrawNormalOfLine.cpp  TestDrawNormals.cpp  TestDrawPathImage.cpp  TestDrawPlane.cpp  TestDrawPointWithNormal.cpp  TestDrawSampledSmoothness.cpp  TestDrawSmoothness.cpp  TestDrawSphere.cpp  TestDrawVerticalPoints.cpp  TestDrawer.cpp  TestEigenSvd.cpp  TestFeatureExtractor.cpp  TestHelloWorld.cpp  TestIntegralImage.cpp  TestMatchable.cpp  TestMyMath.cpp  TestPoint3f.cpp  TestRosbagAPI.cpp  (+9 more)
src/tests/DEPRECATED/: TestDEPRECATED.cpp  TestScanPoint.cpp
tests/: CMakeLists.txt  Starter.cpp  TestDummy.cpp
thesis/: body.tex  thesis.tex
