<?xml version="1.0"?>
<package format="2">
  <name>loam</name>
  <version>0.0.0</version>
  <description>The loam package</description>

  <maintainer email="edoardo.ghini@live.it">dinies</maintainer>

 <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
  <!-- ia build,build_export and exec depend are now contained in 'depend' -->
  <depend>srrg_cmake_modules</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
