<?xml version="1.0"?>
<package format="2">
  <name>loam</name>
  <version>0.0.0</version>
  <description>The loam package</description>

  <maintainer email="edoardo.ghini@live.it">dinies</maintainer>

 <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_core_ros</depend>
  <depend>srrg2_solver</depend>
  <depend>srrg2_slam_interfaces</depend>
  <depend>srrg2_qgl_viewport</depend>



  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
