add_library( loam_library SHARED
  MyMath.cpp
  MyMath.hpp
  DatasetManager.cpp
  DatasetManager.hpp
  Drawer.cpp
  Drawer.hpp
  Visualizer.cpp
  Visualizer.hpp
  features/SphericalDepthImage.cpp
  features/SphericalDepthImage.hpp
  features/Clusterer.cpp
  features/Clusterer.hpp
  features/IntegralImage.cpp
  features/IntegralImage.hpp
  features/IntegralCell.cpp
  features/IntegralCell.hpp
  features/DataPoint.cpp
  features/DataPoint.hpp
  features/Matchable.cpp
  features/Matchable.hpp
  features/Point.cpp
  features/Point.hpp
  features/Plane.cpp
  features/Plane.hpp
  features/Line.cpp
  features/Line.hpp
  features/CustomMatchable.cpp
  features/CustomMatchable.hpp
  CustomMeasurementAdaptor.cpp
  CustomMeasurementAdaptor.hpp
  instances.cpp
  instances.h
  include/structs.hpp
  include/turboColors.cpp
  include/turboColors.hpp
  matcher/CorrespondenceFinderMatchables.cpp
  matcher/CorrespondenceFinderMatchables.hpp
  matcher/CorrespondenceFinderMatchablesBruteForce.cpp
  matcher/CorrespondenceFinderMatchablesBruteForce.hpp
  matcher/CorrespondenceFinderMatchablesKDtree.cpp
  matcher/CorrespondenceFinderMatchablesKDtree.hpp
  aligner/Aligner.cpp
  aligner/Aligner.hpp
 )

target_link_libraries(loam_library
  srrg2_slam_interfaces_library
  ${OpenCV_LIBS}
  ${catkin_LIBRARIES}
  )

